--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,37 @@ body {
   line-height: 60px; /* Vertically center the text there */
   background-color: #f5f5f5;
 }
+.main-image{
+  float:right;
+  border-radius: 50%;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.9);
+}
+
+@media screen and (max-width: 768px) {
+  .parent { 
+    display: table;
+  }
+  .child1 {
+    display: table-footer-group;
+  }
+  .child2 {
+    display: table-footer-group;
+  }
+  .main-image{
+    display: table-footer-group;
+    position: relative;
+    max-width: 80%;
+    margin-left: 70px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+    float: none;
+  }
+  .child3{
+    display: table-header-group;
+  }
+}
 .nav-item{
   padding-right: 20px;
 }
