--- a/css/style.css
+++ b/css/style.css
@@ -35,10 +35,10 @@ body {
     display: table-footer-group;
   }
   .main-image{
-    display: table-footer-group;
+    /*display: table-footer-group;
     position: relative;
     max-width: 80%;
-    margin-left: 70px;
+    margin-left: 70px;*/
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -70,7 +70,7 @@ body {
   margin: 5px 2px;
 }
 /* Custom page CSS
--------------------------------------------------- */
+-------------------------------------------------- 
 /* Not required for template or sticky footer method. */
 
 body > .container {
