--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 40%;
+    /*width: 40%;*/
     float: none;
   }
   .child3{
