--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,1 +1,4 @@
 <link href="https://cdn.jsdelivr.net/npm/lightbox2@2.11.3/dist/css/lightbox.min.css" rel="stylesheet">
+{% if page.og_image %}
+<meta property="og:image" content="{{ page.og_image }}" />
+{% endif %}
