Updating images in agentic workflow

--- a/_includes/lightbox-image.html
+++ b/_includes/lightbox-image.html
@@ -1,5 +1,5 @@
 <!-- _includes/lightbox-image.html -->
 <a href="{{ include.src }}" data-lightbox="gallery">
-    <img src="{{ include.src }}" alt="{{ include.alt }}" style="max-width:100%;">
-  </a>
+    <img src="{{ include.src }}" alt="{{ include.alt }}" style="max-width:100%; border-radius: 10px;">
+</a>
   
